2005-04-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/net/URI.java:
	Added class documentation.
	(parseURI(String)): Only handle scheme-specific parts
	if URI is not opaque.  Allow for parts that can't be null.
	(toString()): Output the scheme-specific part whole, rather
	than as its possibly non-existent components.
	
2005-04-16  Michael Koch  <konqueror@gmx.de>

	* java/rmi/server/RemoteObject.java:
	Removed unused import statement.

2005-04-16  Michael Koch  <konqueror@gmx.de>

	* include/Makefile.am: Removed java_io_ObjectInputStream.h
	and added java_io_VMObjectInputStream.h.
	* include/java_io_ObjectInputStream.h: Removed.
	* include/java_io_VMObjectInputStream.h: New file.
	* java/io/ObjectInputStream.java
	(currentClassLoader): Removed.
	(allocateObject): Likewise.
	* native/jni/java-io/Makefile.am: Removed java_io_ObjectInputStream.c
	and added java_io_VMObjectInputStream.c.
	* native/jni/java-io/java_io_ObjectInputStream.c: Removed.
	* native/jni/java-io/java_io_VMObjectInputStream.c: New file.
	* vm/reference/java/io/VMObjectInputStream.java: Likewise.

2005-04-16  Michael Koch  <konqueror@gmx.de>

	* include/java_lang_Double.h,
	include/java_lang_Object.h,
	native/jni/java-lang/java_lang_Double.c,
	native/jni/java-lang/java_lang_Object.c: Removed.
	* include/java_lang_VMDouble.h: Regenerated.
	* java/lang/Double.java
	(static): Removed.
	(toString): Call native method from VMDouble.
	(parseDouble): Make non-native and call native method from VMDouble.
	(toString): Removed.
	* java/lang/Float.java
	(toString): Call native method from VMDouble.
	* java/lang/Object.java
	(getClass): Refactored to call the native in java.lang.VMObject.
	* include/Makefile.am: Don't generate java_lang_Double.h and
	java_lang_Object.h.
	* native/jni/java-lang/Makefile.am: Removed java_lang_Double.c and
	java_lang_Object.c.
	* native/jni/java-lang/java_lang_VMDouble.c
	(initIDs): New method.
	(toString): Likewise.
	(parseDouble): Likewise.