@@ -1,5 +1,17 @@
 2005-04-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* java/rmi/Naming.java:
+	Added class documentation.
+	(lookup(String)): Call parseURL and getName.
+	(bind(String,java.rmi.Remote)): Likewise.
+	(unbind(String)): Likewise.
+	(rebind(String, java.rmi.Remote)): Likewise.
+	(list(String)): Call parseURL.
+	(parseURL(String)): New method to handle parsing and defaults.
+	(getName(java.net.URL)): New method to handle finding the service name.
+	
+2005-04-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* java/net/URI.java:
 	Added class documentation.
 	(parseURI(String)): Only handle scheme-specific parts
@@ -58,7 +70,6 @@
 	* vm/reference/java/lang/VMObject.java
 	(getClass): Likewise.
 
->>>>>>> 1.3454
 2005-04-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/text/DecimalFormatSymbols.java:
